--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "@chris-hammer/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off",
+      "no-restricted-globals": "off"
+    }
   },
   "browserslist": {
     "production": [
